2019-05-15  Peter Bloomfield  <pbloomfield@bellsouth.net>

	Use G_DECLARE_FINAL_TYPE to declare LibBalsaAddressBookLdap

	Make the structure private, and provide and use the necessary
	getters and setters.

	Adopt ab_ldap as the identifier.

	* libbalsa/address-book-ldap.c
	(libbalsa_address_book_ldap_class_init),
	(libbalsa_address_book_ldap_init),
	(libbalsa_address_book_ldap_finalize),
	(libbalsa_address_book_ldap_new),
	(libbalsa_address_book_ldap_close_connection), (abl_interaction),
	(libbalsa_address_book_ldap_open_connection),
	(libbalsa_address_book_ldap_load),
	(libbalsa_address_book_ldap_get_address),
	(libbalsa_address_book_ldap_add_address),
	(libbalsa_address_book_ldap_remove_address),
	(libbalsa_address_book_ldap_modify_address),
	(libbalsa_address_book_ldap_save_config),
	(libbalsa_address_book_ldap_load_config),
	(libbalsa_address_book_ldap_alias_complete),
	(libbalsa_address_book_ldap_get_host),
	(libbalsa_address_book_ldap_get_base_dn),
	(libbalsa_address_book_ldap_get_bind_dn),
	(libbalsa_address_book_ldap_get_passwd),
	(libbalsa_address_book_ldap_get_book_dn),
	(libbalsa_address_book_ldap_get_enable_tls),
	(libbalsa_address_book_ldap_set_host),
	(libbalsa_address_book_ldap_set_base_dn),
	(libbalsa_address_book_ldap_set_bind_dn),
	(libbalsa_address_book_ldap_set_passwd),
	(libbalsa_address_book_ldap_set_book_dn),
	(libbalsa_address_book_ldap_set_enable_tls):
	* libbalsa/address-book-ldap.h:
	* src/address-book-config.c (create_ldap_dialog), (create_book),
	(modify_book):

2019-05-15  Peter Bloomfield  <pbloomfield@bellsouth.net>

	Use G_DECLARE_FINAL_TYPE to declare LibBalsaAddressBookGpe

	Make the structure private; no need for getters and setters.

	Adopt ab_gpe as the identifier.

	* libbalsa/address-book-gpe.c
	(libbalsa_address_book_gpe_class_init),
	(libbalsa_address_book_gpe_init),
	(libbalsa_address_book_gpe_finalize),
	(libbalsa_address_book_gpe_new),
	(libbalsa_address_book_gpe_close_db),